/*
 * $Id: ChangeLog,v 1.1156 2003/06/20 21:00:47 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-06-20 14:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    - Removed redundant support for E '...' (as per request by Giancarlo)
    * Minor formatting.

2003-06-20 17:50 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source\rtl\tget.prg
    ! Fix initialization of buffer whith BadDate true.
      Reported by Richard Chidiak

2003-06-20 16:00 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/odbc/odbc.c
    ! Fixed: SqlGetData() - completely new and optimized, now you can retrieve any data size
    ! Fixed TYPOs
    + Added New PRG level functions:
        SQLGETINFO()
        SQLSETCONNECTOPTION()
        SQLSETSTMTOPTION()
        SQLGETCONNECTOPTION()
        SQLGETSTMTOPTION()
        SQLCOMMIT()
        SQLROLLBACK()
  * source/odbc/todbc.prg
    ! Minor fixes and reformatting
    + Added New Methods:
        METHOD SetCnnOptions( nType, uBuffer )
        METHOD GetCnnOptions( nType )
        METHOD Commit()
        METHOD RollBack()
        METHOD SetStmtOptions( nType, uBuffer )
        METHOD GetStmtOptions( nType )
        METHOD SetAutocommit( lEnable )
  * source/odbc/sql.ch
    + Added SQLOptions constants

2003-06-20 11:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * makefile.bc
    - Removed -DHB_FM_STATISTICS_OFF because standard build by developers should still have memory leak reporting.

  * source/vm/hvm.c
    % Optimized ->procname handling in hb_vmPushBlock() - no longer allocating any memory.

  * source/vm/codebloc.c
    - Removed conditional hb_xfree() of ->procname - no longer needed.
    + Added logic to reset ->pSelfBase->uiHolders in hb_codeblockDelete() and hb_codeblockDeleteGarbag()

  * source/vm/proc.c