@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1156 2003/06/20 21:00:47 walito Exp $
+ * $Id: ChangeLog,v 1.1157 2003/06/20 21:29:15 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-06-20 22:55 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@uol.com.br>
+  * source/rdd/dbfntx1.c
+    ! Fixed uninitialized var on 2458  by moving it initialization prior pArea Variable initialization
+  * utils/hbmake/hbmake.prg
+    ! Renamed logfile (test.out) to Scriptname.out
 
 2003-06-20 14:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.slx
